--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
     <!-- Navigation Bar -->
-    <nav class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,8 +24,8 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
     <!-- Main Content Section -->
     <main>
