--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 
 <body>
 
-    <!-- Navigation Bar -->
+    <!-- Header section -->
     <header class="header">
+
+        <!-- Horiseon Logo Located Top Left of Header -->
         <h1>Hori<span class="seo">seo</span>n</h1>
+
+        <!-- Navigation Bar -->
         <nav>
             <ul>
                 <li>
@@ -29,54 +33,70 @@
 
     <!-- Main Content Section -->
     <main>
+
+        <!-- Background image -->
         <img class="hero"/>
+
+        <!-- Business  -->
         <section class="content">
-            <div id="search-engine-optimization" class="search-engine-optimization">
+
+            <!-- search engine optimization section -->
+            <section id="search-engine-optimization" class="search-engine-optimization">
                 <img src="./css/images/search-engine-optimization.jpg" alt="A wood table holding a noteboook, cup of coffee, container of pens, and a magnifying glass on top of a laptop." class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
-            </div>
-            <div id="online-reputation-management" class="online-reputation-management">
+            </section>
+
+            <!-- Online reputation management section -->
+            <section id="online-reputation-management" class="online-reputation-management">
                 <img src="./css/images/online-reputation-management.jpg" alt="A person using a computer to look up a chart of brand reputation." class="float-right" />
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
-            </div>
-            <div id="social-media-marketing" class="social-media-marketing">
+            </section>
+
+            <!-- Social Media Marketing Section -->
+            <section id="social-media-marketing" class="social-media-marketing">
                 <img src="./css/images/social-media-marketing.jpg" alt="A group of employees around a table discussing a social media marketing strategy." class="float-left" />
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
-            </div>
+            </section>
         </section>
 
     <!-- Benefits side bar section -->
-        <section id="benefits">
-            <div class="benefit-lead">
+        <aside id="benefits">
+
+            <!-- Benefit lead section -->
+            <section class="benefit-lead">
                 <h3>Lead Generation</h3>
                 <img src="./css/images/lead-generation.png" alt="Horiseon's lead generation logo" />                
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
-            </div>
-            <div class="benefit-brand">
+            </section>
+
+            <!-- Benefit brand section -->
+            <section class="benefit-brand">
                 <h3>Brand Awareness</h3>
                 <img src="./css/images/brand-awareness.png" alt="Horiseon's brand awareness logo."/>                <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
-            </div>
-            <div class="benefit-cost">
+            </section>
+
+            <!-- Benefit cost section -->
+            <section class="benefit-cost">
                 <h3>Cost Management</h3>
                 <img src="./css/images/cost-management.png" alt="Horiseon's cost management logo." />
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
-            </div>
-        </section>
+            </section>
+        </aside>
     </main>
        
     <!-- Footer Section-->
