Updated README Added developer notes to html and css files

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Background image -->
         <img class="hero"/>
 
-        <!-- Business  -->
+        <!-- Business Description -->
         <section class="content">
 
             <!-- search engine optimization section -->
@@ -68,7 +68,7 @@
             </section>
         </section>
 
-    <!-- Benefits side bar section -->
+    <!-- Benefits side bar -->
         <aside id="benefits">
 
             <!-- Benefit lead section -->
